--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -1,28 +1,233 @@
 {{define "base"}}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-        {{block "css" .}}
+<head>
+  <meta charset="utf-8">
+  <title>My Page</title>
 
-        {{end}}
 
-    </head>
-    <body>
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+
+
+</head>
+
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Rooms
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/woods-courtyard">Woods Courtyard</a></li>
+              <li><a class="dropdown-item" href="/signature-suite">Signature Suite</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/search-availability" tabindex="-1" aria="true">Book Now</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact" tabindex="-1" aria="true">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
         {{block "content" .}}
 
         {{end}}
 
-        {{block "js" .}}
+        <div class="row my-footer">
+            <div class="col">
+              Left
+            </div>
+            <div class="col">
+              Middle
+            </div>
+            <div class="col">
+              Right
+            </div>
+          </div>
+        
+          
+          <script src="https://unpkg.com/notie"></script>
+          <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-        {{end}}
+          {{block "js" .}}
 
-    </body>
-    </html>
+          {{end}}
+        
+          <script>
+              let attention = Prompt();
+        
+            (function () {
+              'use strict'
+        
+          // Fetch all the forms we want to apply custom Bootstrap validation styles to
+          let forms = document.querySelectorAll('.needs-validation')
+        
+          // Loop over them and prevent submission
+          Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+              form.addEventListener('submit', function (event) {
+                if (!form.checkValidity()) {
+                  event.preventDefault()
+                  event.stopPropagation()
+                }
+        
+                form.classList.add('was-validated')
+              }, false)
+            })
+        })()
+        
+        
+            function notify(msg, msgType){
+              notie.alert({
+                type: msgType,
+                text: msg,
+              })
+            }
+        
+          function notifyModal(title, text, icon, confirmationButtonText) {
+            Swal.fire({
+                  title: title,
+                  html: text,
+                  icon: icon,
+                  confirmButtonText: confirmationButtonText
+                })
+          }
+        
+          function Prompt() {
+            let toast = function(c) {
+              const {
+                msg = "", 
+                icon = "success", 
+                position = "top-end",
+              } = c;
+              const Toast = Swal.mixin({
+                toast: true,
+                title: msg,
+                position: position,
+                icon: icon,
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener('mouseenter', Swal.stopTimer)
+                  toast.addEventListener('mouseleave', Swal.resumeTimer)
+                  }
+                })
+        
+              Toast.fire({})
+            }
+        
+            let success = function(c) {
+              const {
+                msg = "", 
+                title = "", 
+                footer = "",
+              } = c;
+              Swal.fire({
+                icon: 'success',
+                title: title,
+                text: msg,
+                footer: footer,
+              })
+            }
+            let error = function(c) {
+              const {
+                msg = "", 
+                title = "", 
+                footer = "",
+              } = c;
+              Swal.fire({
+                icon: 'error',
+                title: title,
+                text: msg,
+                footer: footer,
+              })
+            }
+        
+            async function custom(c) {
+            
+              const {
+                msg = "",
+                title = "",
+              } = c;
+              
+              const { value: result } = await Swal.fire({
+                title: title,
+                html: msg,
+                backdrop: false,
+                focusConfirm: false,
+                showCancelButton: true, 
+                willOpen: () => {
+                  if (c.willOpen !== undefined) {
+                      c.willOpen();
+                  }
+                },
+                  preConfirm: () => {
+                    return [
+                      document.getElementById('start').value,
+                      document.getElementById('end').value
+                    ]
+                  },
+                  didOpen: () => {
+                    if (c.didOpen !== undefined) {
+                        c.didOpen();
+                    }
+                  }
+                })
+
+                if (result) {
+                  if (result.dismiss !== Swal.DismissReason.cancel) {
+                    if (result.value !== "") {
+                      if (c.callback !== undefined) {
+                        c.callback(result);
+                      }
+                    } else {
+                      c.callback(false);
+                    }
+                  } else {
+                    c.callback(false);
+                  }
+                }
+        
+            } 
+        
+            return {
+              toast: toast,
+              success: success,
+              error: error,
+              custom: custom,
+            }
+          }
+        
+          </script>
+        
+        
+        </body>
+        
+        </html>
 {{end}}
