--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -1,14 +1,67 @@
 {{template "base" .}}
 
 {{define "content"}}
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <h1>This is the home page</h1>
-            <p>This is some text</p>
-
-            <img src="/static/images/cabin_1.jpeg" height="300" width="500">
-        </div>
+<div id="main-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-</div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/static/images/woman-laptop.png" class="d-block w-100" alt="Woman and laptop image">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Love Where You Stay</h5>
+          <p>Place holder text place holder text place holder text place holder text place holder text place holder text</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/static/images/tray.png" class="d-block w-100" alt="Tray image" style="max-width:100%; max-height:600px !important;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Place Holder Text</h5>
+          <p>Place holder text place holder text place holder text place holder text place holder text place holder text</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/static/images/outside.png" class="d-block w-100" alt="Outside image" style="max-width:100%; max-height:600px !important;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Place Holder Text</h5>
+          <p>Place holder text place holder text place holder text place holder text place holder text place holder text</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#main-carousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#main-carousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="container">
+
+
+    <div class="row">
+      <div class="col">
+        <h1 class="text-center mt-4">Welcome to the Deluxe Resort</h1>
+        <p>paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text
+          paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text
+          paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text
+          paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text
+          paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col text-center">
+        <a href="/search-availability" class="btn btn-primary">Book a room!</a>
+      </div>
+    </div>
+
+
+
+  </div>
 {{end}}
