--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -117,7 +117,19 @@
                   confirmButtonText: confirmationButtonText
                 })
           }
-        
+
+          {{with .Error}}
+          notify("{{.}}", "error")
+          {{end}}
+
+          {{with .Flash}}
+          notify("{{.}}", "success")
+          {{end}}
+
+          {{with .Warning}}
+          notify("{{.}}", "warning")
+          {{end}}
+
           function Prompt() {
             let toast = function(c) {
               const {
