--- a/templates/reservation.page.tmpl
+++ b/templates/reservation.page.tmpl
@@ -6,23 +6,42 @@
 <div class="row">
     <div class="col">
       <h1>Make Reservation</h1>
-      <form class="needs-validation" action="" method="post" novalidate>
-  
-        <div class="form-group mt-5">
+      <p><strong>Reservation Details</strong></p>
+
+      {{$res := index .Data "reservation"}}
+      <form class="" action="/reservation" method="post" novalidate>
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
+        <div class="form-group mt-3">
           <label for="first_name">First Name:</label>
-          <input type="text" name="first_name" class="form-control" required autocomplete="off">
+          {{with .Form.Errors.Get "first_name"}}
+          <label class="text-danger">{{.}}</label>
+          {{end}}
+          <input class="form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}"  value="{{$res.FirstName}}" type="text" name="first_name"  required autocomplete="off">
         </div>
+
         <div class="form-group">
           <label for="">Last Name:</label>
-          <input type="text" name="last_name" class="form-control" required autocomplete="off">
+          {{with .Form.Errors.Get "last_name"}}
+          <label class="text-danger">{{.}}</label>
+          {{end}}
+          <input type="text" id="last_name" name="last_name" class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}" value="{{$res.LastName}}" required autocomplete="off">
         </div>
+
         <div class="form-group">
           <label for="">Email:</label>
-          <input type="email" name="email" class="form-control" required autocomplete="off">
+          {{with .Form.Errors.Get "email"}}
+          <label class="text-danger">{{.}}</label>
+          {{end}}
+          <input type="email" id="email" name="email" class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}" value="{{$res.Email}}" required autocomplete="off">
         </div>
+
         <div class="form-group">
           <label for="">Phone Number:</label>
-          <input type="text" name="phone_number" class="form-control" required autocomplete="off">
+          {{with .Form.Errors.Get "phone"}}
+          <label class="text-danger">{{.}}</label>
+          {{end}}
+          <input type="text" id="phone" name="phone" class="form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}" value="{{$res.Phone}}" required autocomplete="off">
         </div>
   
         <hr>
